--- a/Checklist.html
+++ b/Checklist.html
@@ -11,52 +11,58 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1,  minimum-scale=1, maximum-scale=1, user-scalable=no"/>
     <meta name="viewport" content="initial-scale = 1.0, user-scalable = no"/>
-	<!--
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.5/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.5/angular-resource.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.5/angular-route.min.js"></script>
-    <script src="https://cdn.firebase.com/v0/firebase.js"></script>
-    <script src="https://cdn.firebase.com/libs/angularfire/0.5.0/angularfire.min.js"></script>
-    -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.js"> </script>
 </head>    
 
-<body ng-controller="ChecklistCtrl">
-	<input class='normal' id='checklist_id' type='hidden' value='{!$CurrentPage.parameters.checklist_id}'/>
-	<div id="messages"></div>
-	<div>
-		<div id="checklist">
-	    	<ul>
-			    <li ng-show="!checklistitems.length">No checklistitems</li>
-			    <form onsubmit="submitForm()">
-				    <li ng-repeat="checklistitem in checklistitems | orderBy: 'Order__c'"> 
-				    	<span ng-switch="checklistitem.Type__c">
-					    	<p> Question: {{checklistitem.Question__c}} </p> 
-					    	<p> Required: {{checklistitem.Required__c}} </p> 
-					    	<p> Type: {{checklistitem.Type__c}} </p> 
-					    	<p> Id: {{checklistitem.Id}} </p> 
-					    	<p> Checklist Id: {{checklistitem.Checklist__c}} </p> 
-					    	<p> Order: {{checklistitem.Order__c}} </p> 
-						    <input id="form_yes/no_{{checklistitem.Id}}" type="checkbox" ng-switch-when="Yes/No"> </input>
-						    <input id="form_number_{{checklistitem.Id}}" type="number" ng-switch-when="Number"> </input>
-						    <input id="form_text_{{checklistitem.Id}}" type="text" ng-switch-when="Text"> </input>
-						    <input id="form_date_{{checklistitem.Id}}" type="date" ng-switch-when="Date"> </input>
-						    <textarea id="form_longtext_{{checklistitem.Id}}" ng-switch-when="Long Text">Enter response here...</textarea>
-							<!-- Multiple Values from Database -->
-						    <input id="form_rating_{{checklistitem.Id}}" type="range" ng-switch-when="Rating" min="{{checklistitem.Values__c[0]}}" max="{{checklistitem.Values__c[3]}}"> </input>
-						    <select id="form_date_{{checklistitem.Id}}" ng-switch-when="Picklist"> 
-						    	<option value="{{checklistitems.Values__c[0]}}">{{checklistitems.Values__c[0]}}</option>
-								<option value="{{checklistitems.Values__c[3]}}">checklistitems.Values__c[3]</option>
-						    </select>
-						    <input id="form_checkbox_{{checklistitem.Id}}" type="checkbox" value="{{checklistitems.Values__c[0]}}" ng-switch-when="Multi-Select"> </input>
-						    <input id="form_checkbox_{{checklistitem.Id}}" type="checkbox" value="{{checklistitems.Values__c[3]}}" ng-switch-when="Multi-Select"> </input>
-						 </span>
-				    </li>
-				    <input type="submit" value="Submit"> </input>
-		    	</form>
-		    </ul>
+<body>
+	<div ng-controller="PagesController">
+		<input class='normal' id='checklist_id' type='hidden' value='{!$CurrentPage.parameters.checklist_id}'/>
+		<div id="messages"></div>
+
+		<div id="checklistListPage" ng-controller="ListCtrl" ng-show="listPageActive">
+		    <li ng-repeat="checklist in checklists | orderBy: 'Name'"> 
+		    	<p> {{checklist.Name}} </p>
+		    	<p> {{checklist.Description__c}} </p>
+		    </li>
 		</div>
+		<!-- End of checklistListPage -->
+
+		<div id="checklistDetailPage" ng-controller="ChecklistCtrl" ng-show="detailPageActive">
+			<div id="checklist">
+		    	<ul>
+				    <li ng-show="!checklistitems.length">No checklistitems</li>
+				    <form onsubmit="submitForm()">
+					    <li ng-repeat="checklistitem in checklistitems | orderBy: 'Order__c'"> 
+					    	<span ng-switch="checklistitem.Type__c">
+						    	<p> Question: {{checklistitem.Question__c}} </p> 
+						    	<p> Required: {{checklistitem.Required__c}} </p> 
+						    	<p> Type: {{checklistitem.Type__c}} </p> 
+						    	<p> Id: {{checklistitem.Id}} </p> 
+						    	<p> Checklist Id: {{checklistitem.Checklist__c}} </p> 
+						    	<p> Order: {{checklistitem.Order__c}} </p> 
+							    <input id="form_yes/no_{{checklistitem.Id}}" type="checkbox" ng-switch-when="Yes/No"> </input>
+							    <input id="form_number_{{checklistitem.Id}}" type="number" ng-switch-when="Number"> </input>
+							    <input id="form_text_{{checklistitem.Id}}" type="text" ng-switch-when="Text"> </input>
+							    <input id="form_date_{{checklistitem.Id}}" type="date" ng-switch-when="Date"> </input>
+							    <textarea id="form_longtext_{{checklistitem.Id}}" ng-switch-when="Long Text">Enter response here...</textarea>
+								<!-- Multiple Values from Database -->
+							    <input id="form_rating_{{checklistitem.Id}}" type="range" ng-switch-when="Rating" min="{{checklistitem.Values__c[0]}}" max="{{checklistitem.Values__c[3]}}"> </input>
+							    <select id="form_date_{{checklistitem.Id}}" ng-switch-when="Picklist"> 
+							    	<option value="{{checklistitems.Values__c[0]}}">{{checklistitems.Values__c[0]}}</option>
+									<option value="{{checklistitems.Values__c[3]}}">checklistitems.Values__c[3]</option>
+							    </select>
+							    <input id="form_checkbox_{{checklistitem.Id}}" type="checkbox" value="{{checklistitems.Values__c[0]}}" ng-switch-when="Multi-Select"> </input>
+							    <input id="form_checkbox_{{checklistitem.Id}}" type="checkbox" value="{{checklistitems.Values__c[3]}}" ng-switch-when="Multi-Select"> </input>
+							 </span>
+					    </li>
+					    <input type="submit" value="Submit"> </input>
+			    	</form>
+			    </ul>
+			</div>
+		</div>
+		<!-- End of checklistDetailPage -->
+
 	</div>
 </body>
 
@@ -64,6 +70,12 @@
  /* Angular */
 var myApp = angular.module('myApp', []);
 var checklistitems;
+var checklists;
+
+myApp.controller("ListCtrl", function ($scope) {
+	checklists = {!CheckLists};
+	$scope.checklists = checklists;
+});
 
 myApp.controller("ChecklistCtrl", function ($scope) {
 	checklistitems = {!CheckListItems};
@@ -141,6 +153,26 @@ function submitForm() {
     }
 
 }
+
+var controllers = {};
+
+controllers.PagesController = function ($scope) {
+    $scope.listPageActive = true;
+    $scope.detailPageActive = false;
+    $scope.checklist_id = null;
+
+    $scope.goToDetailPage = function(checklist_id) {
+        $scope.listPageActive = false;
+        $scope.detailPageActive = true;
+        $scope.checklist_id = checklist_id;
+    };
+    $scope.goToHomepage = function() {
+        $scope.listPageActive = true;
+        $scope.detailPageActive = false;                    
+    }
+}
+
+myApp.controller(controllers);
 
 </script>
 
