--- a/checklistAdmin.html
+++ b/checklistAdmin.html
@@ -18,10 +18,10 @@
 <body ng-controller="AdminCtrl">
 <form name="newChecklistForm">
   <h1>Checklist Name</h1>
-  <input type="text" ng-model="checklist.name"></input>
+  <input type="text" ng-model="checklist.name" name="formName" ng-required="true"></input>
   <h1>Checklist Description</h1>
   <input type="text" ng-model="checklist.description"></input>
-  <input type="submit" value="Submit " ng-click="createChecklist()"> </input>
+  <input type="submit" value="Submit " ng-click="submitChecklist()"> </input>
 </form>
 </body>
 
@@ -35,12 +35,10 @@ checklistApp.controller("AdminCtrl", function ($scope) {
     $scope.checklist.name = 'Default Name';
     $scope.checklist.description = 'Default Desc';
     $scope.createChecklist = function() {
-        var nom = $scope.checklist.name;
-    var desc = $scope.checklist.description;
     Visualforce.remoting.Manager.invokeAction(
         '{!$RemoteAction.ChecklistAdminController.createChecklist}',
-        nom,
-        desc,
+        $scope.checklist.name,
+        $scope.checklist.description,
             function(result, event){
                 if (event.status) {
                     console.log('SUCCESS!');
@@ -52,9 +50,16 @@ checklistApp.controller("AdminCtrl", function ($scope) {
                 }
             },
         {escape: true}
-    );
-
+    );}
+    $scope.submitChecklist = function() {
+        if($scope.newChecklistForm.formName.$valid) {
+            console.log('valid');
+            $scope.createChecklist();
+        } else {
+            console.log('invalid');
+        }
     }
+
 });
 
 </script>
