--- a/checklistAdmin.html
+++ b/checklistAdmin.html
@@ -15,7 +15,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.js"> </script>
 </head>    
 
-<body ng-controller="AdminCtrl">
+<body>
+    <div ng-controller="AdminCtrl">
 <form name="newChecklistForm">
   <h1>Checklist Name</h1>
   <input type="text" ng-model="checklist.name" name="formName" ng-required="true"></input>
@@ -23,6 +24,7 @@
   <input type="text" ng-model="checklist.description"></input>
   <input type="submit" value="Submit " ng-click="submitChecklist()"> </input>
 </form>
+</div>
 </body>
 
 <script>
