--- a/Checklist.html
+++ b/Checklist.html
@@ -166,24 +166,13 @@ controllers.PagesController = function ($scope) {
         $scope.listPageActive = false;
         $scope.detailPageActive = true;
         $scope.checklist_id = checklist_id;
-        console.log(checklist_id);
 
-        Visualforce.remoting.Manager.invokeAction(
-        '{!$RemoteAction.ChecklistController.checklist_items}',
-        checklist_id,
-            function(result, event){
-                if (event.status) {
-                    checklistitems = result;
-                    console.log(checklistitems);
-                } else if (event.type === 'exception') {
-                    console.log('Exception!');
-                } else {
-                    console.log('Error!');
-                }
-            },
-        {escape: true}
-	    );
+		get_checklist_items(checklist_id);        
+		console.log(checklistitems);
 
+        setTimeout(function(){
+        	console.log(checklistitems);
+        },3000);
 
     };
     $scope.goToHomepage = function() {
@@ -191,6 +180,24 @@ controllers.PagesController = function ($scope) {
         $scope.detailPageActive = false;                    
     }
 }
+
+function get_checklist_items(checklist_id) {
+	Visualforce.remoting.Manager.invokeAction(
+    '{!$RemoteAction.ChecklistController.checklist_items}',
+    checklist_id,
+        function(result, event){
+            if (event.status) {
+                checklistitems = result;
+            } else if (event.type === 'exception') {
+                console.log('Exception!');
+            } else {
+                console.log('Error!');
+            }
+        },
+    {escape: true}
+    );
+}
+
 
 myApp.controller(controllers);
 
