quick box shadow fix

--- a/TheMockups/index.html
+++ b/TheMockups/index.html
@@ -233,7 +233,7 @@ input[type="checkbox"] {
 input[type="checkbox"]:checked {
     background: url(check.svg) no-repeat center;
     background-size: cover;
-    border: 1px solid #CCC;
+    box-shadow: none;
 }
     
 .submit {
